ultimas implementaçoes requisitos 1 e 2 Adicionar arquivos de projeto.

--- a/academiaigor3/Views/Home/Index.cshtml
+++ b/academiaigor3/Views/Home/Index.cshtml
@@ -7,7 +7,8 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <div class="col-md-12">
-        <div class="h-100 p-5 text-white bg-dark rounded-3">
+        <div class=" h-100 p-5 text-white bg-dark rounded-3">
+          <div>class="text-center"</div>
           <h2>Texto aqui</h2>
           <p>Texto no fundo.</p>
           <button class="btn btn-outline-light" type="button" onclick="OnDivClick();">Botão alert</button>
