--- a/academiaigor3/Views/PessoaModels/Edit.cshtml
+++ b/academiaigor3/Views/PessoaModels/Edit.cshtml
@@ -41,8 +41,8 @@
             <div class="form-group mt-2 mb-2">
                 <label asp-for="situação" class="control-label"></label>
                 <select asp-for="situação">
-                    <option asp-controller="AlterarStatus" value="Ativo">Ativo</option>
-                    <option asp-controller="AlterarStatus" value="Desativado">Desativado</option>
+                    <option value="Ativo">Ativo</option>
+                    <option  value="Desativado">Desativado</option>
                 </select>
             </div>
             <div class="form-group">
