--- a/academiaigor3/Views/Home/Index.cshtml
+++ b/academiaigor3/Views/Home/Index.cshtml
@@ -3,23 +3,23 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Wanderson</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Aplicavo Web Academia Trainee</h1>
 </div>
 <div class="col-md-12">
-        <div class=" h-100 p-5 text-white bg-dark rounded-3">
-          <div>class="text-center"</div>
-          <h2>Texto aqui</h2>
-          <p>Texto no fundo.</p>
-          <button class="btn btn-outline-light" type="button" onclick="OnDivClick();">Botão alert</button>
-          <button class="btn btn-outline-light" type="button" onclick="ParaPrivacy();">Privacy via java</button>
-          <a      class="btn btn-outline-light" href="Home/Privacy">privacy via .net</a>
-        </div>
-      </div>
-
+    <div class=" text-center h-100 p-5 text-white bg-dark rounded-3">
+        <h2>Exemplo de Jumbotron, usando bootstrap </h2>
+        <p>Agradecimentos especiais aos alunos Alex da Silva, Cassio, Gustavo Elizeta e Tales, que me ajudaram muito e, principalmente, ao Professor Eduardo Cadete</p>
+        <button class="btn btn-outline-light" type="button" onclick="OnDivClick();">Botão alert</button>
+        <button class="btn btn-outline-light" type="button" onclick="EmpresaModels();">Cadastro empresa via java</button>
+        <a class="btn btn-outline-light" href="/PessoaModels">Cadastro pessoas via .net</a>
+    </div>
+</div>
+<div>
+    <p>Aplicativo de Igor De Nadai. Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
 
 <script>
-    function ParaPrivacy(){
-       window.location.href="Home/Privacy";
+    function EmpresaModels(){
+       window.location.href="/EmpresaModels";
     }
 </script>
