--- a/academiaigor3/Views/EmpresaModels/Create.cshtml
+++ b/academiaigor3/Views/EmpresaModels/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Cadastrar Nova empresa</h1>
 
-<h4>EmpresaModels</h4>
+<h4>Modelo Empresa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,15 +28,13 @@
                 <span asp-validation-for="Cnpj" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-success" />
+                <a class="btn btn-primary" asp-action="Index">Voltar para a lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
