--- a/academiaigor3/Views/PessoaModels/Create.cshtml
+++ b/academiaigor3/Views/PessoaModels/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Cadastrar Novo perfil</h1>
 
-<h4>PessoaModel</h4>
+<h4>Modelo Pessoa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,15 +38,13 @@
                 <span asp-validation-for="Salario" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-success" />
+                <input type="submit" value="Cadastrar" class="btn btn-success" />
+                <a class="btn btn-primary" asp-action="Index">Voltar para a lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
