--- a/academiaigor3/Views/PessoaModels/Delete.cshtml
+++ b/academiaigor3/Views/PessoaModels/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que você quer apagar esse perfil ?</h3>
 <div>
-    <h4>PessoaModel</h4>
+    <h4>Deletar Perfil</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -51,7 +51,7 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Codigo" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a class="btn btn-primary" asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" />
+        <a class="btn btn-primary" asp-action="Index">Voltar para a lista</a>
     </form>
 </div>
