--- a/academiaigor3/Views/PessoaModels/Details.cshtml
+++ b/academiaigor3/Views/PessoaModels/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>PessoaModel</h4>
+    <h4>Detalhes Perfil</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -49,5 +49,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Index">Voltar para a lista</a>
 </div>
