--- a/academiaigor3/Views/PessoaModels/Edit.cshtml
+++ b/academiaigor3/Views/PessoaModels/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>PessoaModel</h4>
+<h4>Editar perfil</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,14 +46,11 @@
                 </select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-success" />
+                <input type="submit" value="Salvar" class="btn btn-success"/>
+                <a class="btn btn-primary" asp-action="Index">Voltar para a lista</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a class="btn btn-primary" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
